[tool.poetry]
name = "enquiries"
version = "0.1.0"
description = "Ask simple questions - get simple answers"
authors = ["Peter Holloway <holloway.p.r@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
curtsies = "^0.3.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.7"
pytest = "^6.1.2"
pytest-cov = "^2.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
