[tool.poetry]
name = "enquiries"
version = "0.3.0pre"
description = "Ask simple questions - get simple answers"
authors = ["Peter Holloway <holloway.p.r@gmail.com>"]
license = "MPL-2.0"
readme = "README.rst"
keywords = ['cli', 'prompt', 'input']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[project.urls]
"Homepage" = "https://gitlab.com/facingBackwards/enquiries"
"Bug Tracker" = "https://gitlab.com/facingBackwards/enquiries/-/issues"

[tool.poetry.dependencies]
python = "^3.7"
curtsies = "^0.3.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.7"
pytest = "^7.3.1"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.core.masonry.api"
